Correct text alignment in tables

--- a/src/assets/stylesheets/base/_reset.scss
+++ b/src/assets/stylesheets/base/_reset.scss
@@ -115,7 +115,6 @@ table {
 td,
 th {
   font-weight: normal;
-  text-align: left;
   vertical-align: top;
 }
 
